--- a/src/styles/atoms/Button.scss
+++ b/src/styles/atoms/Button.scss
@@ -12,6 +12,8 @@
       content: 'Add';
     }
     &.button--edit {
+      background-color: #dcecfa !important;
+      color: #333;
       &::before {
         content: 'Edit';
       }
