--- a/src/styles/atoms/DropdownOptions.scss
+++ b/src/styles/atoms/DropdownOptions.scss
@@ -1,6 +1,6 @@
 .dropdown {
   width: 100%;
-  border: 0.1875rem solid #f5f5f5;
+  border: 0.1875rem solid #dcecfa;;
   box-shadow: 1rem 1rem 5rem rgba(204, 204, 204, 0.16), 0px 0px 0px rgba(204, 204, 204, 0.12),
     0px -16px 32px rgba(204, 204, 204, 0.08);
   border-radius: 2rem;
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   background-color: #fafdff;
   &__wrapper {
-    background-color: #eaf4fd;
+    background-color: #dcecfa;
     display: flex;
     flex-direction: column;
     gap: 0.125rem;
@@ -19,6 +19,9 @@
   background-color: #fafdff;
   width: 100%;
   padding: 1rem 0rem;
+  &:hover{
+    background-color: #dcecfa;
+  }
 }
 
 .item__text {
