--- a/src/styles/atoms/Notification.scss
+++ b/src/styles/atoms/Notification.scss
@@ -16,6 +16,7 @@
   border: 0.125rem solid #dcecfa;
   transition: all 0.3s ease-out;
   opacity: 0;
+  background-color: #fff;
   &--visible {
     visibility: visible;
     opacity: 1;
