--- a/src/styles/atoms/InputField.scss
+++ b/src/styles/atoms/InputField.scss
@@ -15,6 +15,7 @@
   &--active,
   &:focus {
     ~ .label {
+      background: linear-gradient(0deg, #fff 50%, rgba(255, 255, 255, 0) 50%);
       top: -0.75rem;
       left: 2.5rem !important;
       font-size: 1.5rem;
@@ -24,27 +25,25 @@
     }
   }
   &:focus {
-    background-color: #eaf4fd;
+    background-color: #d0e4ff;
     border-color: #6dacff;
     ~ .label {
-      background: linear-gradient(0deg, rgba(234, 244, 253, 1) 50%, rgba(255, 255, 255, 0) 50%);
+      background: linear-gradient(0deg, #d0e4ff 50%, rgba(255, 255, 255, 0) 50%);
       color: #5485c5;
     }
   }
 }
 
 .icon {
-  // TODO: Remove if icon works
-  background-color: #bebebe79;
+  // display: none;
   border-radius: 4rem;
-
-  // background-image: url('../../assets/icons/pointer_back.svg');
   position: absolute;
   top: 0.5rem;
   height: 4rem;
   width: 4rem;
   background-repeat: no-repeat;
-  background-size: 10px 10px;
+  background-size: 2rem;
+  background-position: center;
   &--left {
     left: 3rem;
     ~ .input {
@@ -63,6 +62,7 @@
 }
 
 .label {
+  pointer-events: none;
   transition: all 0.1s ease-out;
   position: absolute;
   top: 1rem;
