--- a/src/styles/molecules/WeatherCard.scss
+++ b/src/styles/molecules/WeatherCard.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  width: 100%;
+  // width: 100%;
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -7,6 +7,7 @@
 
 .card {
   width: 100%;
+  height: 10rem;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
@@ -14,9 +15,9 @@
   align-items: center;
   border: 0.125rem solid #b0c4de;
   border-radius: 2rem;
-  background-color: #eaf4fd;
+  background-color: #eaf4fd91;
   &--edit {
-    width: calc(100% - 4.25rem);
+    width: calc(100% - 5.25rem);
   }
 }
 
@@ -26,7 +27,7 @@
     line-break: auto;
     height: 3.5rem;
     white-space: nowrap;
-    width: calc(100vw - 20rem);
+    width: calc(100vw - 26rem);
     overflow: hidden;
     text-overflow: ellipsis;
   }
@@ -34,12 +35,9 @@
     line-break: auto;
     height: 2.5rem;
     white-space: nowrap;
-    width: calc(100vw - 20rem);
+    width: calc(100vw - 26rem);
     overflow: hidden;
     text-overflow: ellipsis;
     color: #999;
   }
-}
-
-.weather-icon {
 }
